# challenge-latam-de-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: README.md  cfg.py  constants.py  enums.py  extract.py  logger.py  main.py  utils.py
docker/: README.md  docker-compose.dev.yml  docker-compose.jupyter.yml
docker/hub/: Dockerfile.dev  Dockerfile.jupyter
notebooks/: JSON read comparison.ipynb  Q1 processing time.ipynb  Q2 memory efficiency.ipynb
src/: challenge.ipynb  q1_memory.py  q1_time.py  q2_memory.py  q2_time.py  q3_memory.py  q3_time.py
